# tigerflow-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  index.html  pyproject.toml  versions.json
.claude/: CLAUDE.md
.claude/commands/: check-docs.md  update-docs.md
.github/: dependabot.yml  release.yml
.github/workflows/: cd.yml  ci.yml  docker.yml  integration.yml
0.1/tasks/detect/: index.html
0.1/tasks/transcribe/: index.html
docs/: mkdocs.yml
docs/mkdocs/: index.md
docs/mkdocs/tasks/: chat.md  chat_completion.md  detect.md  ocr.md  transcribe.md  translate.md
examples/detect/: config.yaml  config_video.yaml  detect.py  run.py
examples/ocr/: config.yaml  ocr.py  run.py
examples/transcribe/: config.yaml  run.py  transcribe.py
examples/translate/: .gitignore  config.yaml  run.py  translate.py
next/: 404.html  index.html
next/assets/css/: extra.css
next/search/: search_index.json
next/tasks/chat/: index.html
next/tasks/chat_completion/: index.html
next/tasks/detect/: index.html
next/tasks/ocr/: index.html
next/tasks/transcribe/: index.html
next/tasks/translate/: index.html
scripts/: debug_windows.py
src/tigerflow_ml/: __init__.py  ocr.py  params.py  translate.py  utils.py
src/tigerflow_ml/audio/: __init__.py
src/tigerflow_ml/audio/transcribe/: README.md  __init__.py  _base.py  formats.py  local.py  slurm.py  transcriber.py
src/tigerflow_ml/image/: __init__.py
src/tigerflow_ml/image/detect/: __init__.py  _base.py  local.py  slurm.py
src/tigerflow_ml/text/chat/: __init__.py  _base.py  local.py  slurm.py
src/tigerflow_ml/text/chat_completion/: __init__.py  _base.py  local.py  slurm.py  utils.py
src/tigerflow_ml/text/ocr/: __init__.py  _base.py  local.py  slurm.py
src/tigerflow_ml/text/text_completion/: _base.py  local.py  slurm.py  utils.py
src/tigerflow_ml/text/translate/: README.md  __init__.py  _base.py  chunking.py  detection.py  errors.py  local.py  slurm.py  translator.py  utils.py
src/tigerflow_ml/text/translate2/: __init__.py  _base.py  local.py  slurm.py  translator.py  utils.py
tests/: conftest.py  test_helpers.py  test_imports.py  test_params.py
tests/integration/: conftest.py  default_config.json  test_chat.py  test_chat_completion.py  test_detect.py  test_ocr.py  test_transcribe.py  test_translate.py
tests/integration/fixtures/chat-completion/: declaration.txt
tests/integration/fixtures/snapshots/chat-completion/: declaration.txt
tests/integration/fixtures/snapshots/detect/: noaa.json  orcas.json  orcas.zero-shot.json
tests/integration/fixtures/snapshots/ocr/: handwriting_pdf.txt  page_screenshot.txt  pdf_input.txt  resume.txt
tests/integration/fixtures/snapshots/transcribe/: sample.json  sample.srt
tests/integration/fixtures/snapshots/translate/: pirandello.no-detect.txt  pirandello.no-lang.txt  pirandello.txt
tests/integration/fixtures/translate/: pirandello.txt
tests/text/translate/: test_chunking.py  test_params.py  test_translation.py  test_utils.py
tests/translate/: test_chunking.py
tests/unit/: test_entry_points.py  test_helpers.py  test_imports.py  test_params.py  test_utils.py  test_wiring.py
tests/unit/audio/transcribe/: test_formats.py  test_transcriber.py
tests/unit/text/chat/: test_chat.py  test_params.py
tests/unit/text/chat_completion/: test_chat_completion.py  test_params.py  test_utils.py
tests/unit/text/ocr/: test_ocr.py  test_params.py
tests/unit/text/translate/: test_chunking.py  test_detection.py  test_params.py  test_translation.py  test_utils.py
