[project]
name = "tigerflow-ml"
version = "0.1.0"
description = "ML tasks for TigerFlow (translation, OCR)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tigerflow",
    "transformers",
    "torch",
    "Pillow",
]

[project.entry-points."tigerflow.tasks"]
translate = "tigerflow_ml.translate:Translate"
ocr = "tigerflow_ml.ocr:OCR"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tigerflow_ml"]
