[project]
name = "tigerflow-ml"
version = "0.1.0a0"
description = "ML task library for TigerFlow"
readme = "README.md"
authors = [
    { name = "Colin Swaney", email = "colinswaney@princeton.edu" },
    { name = "Sangyoon Park", email = "sp8538@princeton.edu" },
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "tigerflow>=0.3.0",
    "transformers>=4.45",
    "torch>=2.0",
    "Pillow",
    "pymupdf>=1.27.1",
    "sentencepiece",
    "opencv-python-headless",
    "timm",
]

[project.urls]
Repository = "https://github.com/princeton-ddss/tigerflow-ml"
Documentation = "https://princeton-ddss.github.io/tigerflow-ml/latest"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "test"},
]
lint = [
    "pre-commit>=4.0.0",
    "ty>=0.0.17",
]
docs = [
    "mike>=2.1.3",
    "mkdocs-material>=9.7.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-dependency>=0.6",
]

[project.entry-points."tigerflow.tasks"]
translate = "tigerflow_ml.text.translate.slurm:Translate"
translate-local = "tigerflow_ml.text.translate.local:Translate"
ocr = "tigerflow_ml.text.ocr.slurm:OCR"
ocr-local = "tigerflow_ml.text.ocr.local:OCR"
transcribe = "tigerflow_ml.audio.transcribe.slurm:Transcribe"
transcribe-local = "tigerflow_ml.audio.transcribe.local:Transcribe"
detect = "tigerflow_ml.image.detect.slurm:Detect"
detect-local = "tigerflow_ml.image.detect.local:Detect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tigerflow_ml"]

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.src]
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
